# viecpro-backend-devops

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  manage.py  package-lock.json  pyproject.toml  start.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  env_file_template.env
.github/workflows/: build.yml
apis/: __init__.py  celery.py  urls.py  wsgi.py
apis/settings/: apisviecpro_backend_prod.py  apisviecpro_backend_test.py  base.py  dev.py
apis_core/apis_entities/: forms.py  models.py
apis_core/apis_labels/: models.py
apis_core/apis_relations/: forms2.py
apis_import_project/: apps.py  forms.py  models.py
deduplication_tool/: apps.py  readme.md  urls.py  views.py
deduplication_tool/api/: routers.py  serializers.py  urls.py  views.py
dubletten_tool/: apps.py  forms.py  merge_functions.py  merge_tables.py  merge_views.py  models.py  redis_client.py  tasks.py  urls.py
notebooks/: Check bibtex fields.ipynb  Court Detail.ipynb  Date Processing.ipynb  Debug Bibsonomy.ipynb  Dubletten_Tool_Bughunt.ipynb  Dubletten_Tool_re-implement all_persons_list.ipynb  Funktionsregister WIP.ipynb  Reference Detail .ipynb  Source Detail.ipynb  Untitled.ipynb  place_detail.ipynb  test_state_validation.ipynb
typesense-schemata/: viecpro_typesense_schema_2023-12-06.json  viecpro_typesense_schema_2024-01-17.json
typesense_2025/: collections.py  fields.py
viecpro_deduplication/: apps.py  forms.py  merge_functions.py  merge_tables.py  merge_views.py  suggestions.py  tasks.py  urls.py  views.py
viecpro_function_register/: admin.py  apps.py  models.py
viecpro_hierarchy/: api_views.py  apps.py  tree_functions.py  urls.py  views.py
viecpro_import/: apps.py  forms.py  models.py  urls.py  views.py
viecpro_typesense/: __init__.py  apps.py  clients.py  collections.py  defaults.py  errors.py  fields.py  handlers.py  utils.py  viecpro_workflow.py
viecpro_typesense_detail/: apps.py  structs.py
(+121 files in other folders)
